--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -49,8 +49,8 @@
     </style>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -58,6 +58,14 @@
 
 <div class="container">
     <form class="form-signin" role="form" action="{{ path("admin_security_user_check") }}" method="post">
+        {% if error %}
+        <div class="alert alert-danger">{{ error|trans }}</div>
+        {% endif %}
+        {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="alert alert-success">
+        {{ flashMessage|trans({}, 'FSiAdminSecurity') }}
+        </div>
+        {% endfor %}
         <input type="text" name="_username" class="form-control" placeholder="{{ 'admin.login.email.placeholder'|trans({}, 'FSiAdminSecurity') }}" required autofocus>
         <input type="password" name="_password" class="form-control" placeholder="{{ 'admin.login.password.placeholder'|trans({}, 'FSiAdminSecurity') }}" required>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
