--- a/Resources/views/Admin/change_password.html.twig
+++ b/Resources/views/Admin/change_password.html.twig
@@ -1,20 +1,22 @@
 {% extends admin_templates_base %}
 
 {% block themes %}
-    {% form_theme form admin_templates_resource_form_theme %}
+    {% form_theme form admin_templates_form_theme %}
 {% endblock themes %}
 
 {% block content %}
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-body">
-            <h3 id="page-header">{{ 'admin.change_password'|trans({}, 'FSiAdminSecurity') }}</h3>
+            <span id="page-header">{% block header %}{{ 'admin.change_password'|trans({}, 'FSiAdminSecurity') }}{% endblock header %}</span>
             {{ form_start(form, { 'attr': { class: 'form-horizontal' }|merge(form.vars.attr) }) }}
             {{ form_widget(form) }}
             <div class="form-group">
                 <div class="col-lg-offset-2 col-lg-10">
-                    <button type="submit" class="btn btn-default">{{ 'admin.change_password_form.button.save'|trans({}, 'FSiAdminSecurity')  }}</button>
-                    <button type="reset" class="btn btn-primary">{{ 'admin.change_password_form.button.reset'|trans({}, 'FSiAdminSecurity')  }}</button>
+                    <button type="submit" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-floppy-disk"></span>
+                        {{ 'admin.change_password_form.button.save'|trans({}, 'FSiAdminSecurity')  }}
+                    </button>
                 </div>
             </div>
             {{ form_end(form) }}
