--- a/Resources/views/PasswordReset/request.html.twig
+++ b/Resources/views/PasswordReset/request.html.twig
@@ -5,7 +5,7 @@
         {% for type, messages in app.session.flashbag.all() %}
             {% for message in messages %}
                 <div class="flash {{ type }}">
-                    {{ message }}
+                    {{ message|trans({}, 'FSiAdminSecurity') }}
                 </div>
             {% endfor %}
         {% endfor %}
