--- a/Resources/views/PasswordReset/mail.html.twig
+++ b/Resources/views/PasswordReset/mail.html.twig
@@ -1,9 +1,9 @@
 {% block subject -%}
-    Reset Password
+    {{ 'admin.password_reset.request.mail_subject'|trans({}, 'FSiAdminSecurity') }}
 {%- endblock %}
 
 {% block body_html -%}
-    To reset your password - please visit:
+    {{ 'admin.password_reset.request.mail_info'|trans({}, 'FSiAdminSecurity') }}
     {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.confirmationToken}) %}
     <a href="{{ changePasswordUrl }}">{{ changePasswordUrl }}</a>
 {%- endblock %}
