Better look and feel

--- a/Resources/views/PasswordReset/change_password.html.twig
+++ b/Resources/views/PasswordReset/change_password.html.twig
@@ -1,5 +1,9 @@
 {% extends '@FSiAdminSecurity/layout.html.twig' %}
 
+{% block themes %}
+    {% form_theme form 'bootstrap_3_layout.html.twig' %}
+{% endblock %}
+
 {% block body %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
