--- a/features/fixtures/project/app/Resources/views/form_theme.html.twig
+++ b/features/fixtures/project/app/Resources/views/form_theme.html.twig
@@ -1,4 +1,4 @@
-{% extends '@FSiAdmin/Form/form_div_layout.html.twig' %}
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 
 {% block form_errors %}
     {% spaceless %}
