--- a/Resources/views/PasswordReset/mail.html.twig
+++ b/Resources/views/PasswordReset/mail.html.twig
@@ -3,7 +3,12 @@
 {%- endblock %}
 
 {% block body_html -%}
-    {{ 'admin.password_reset.request.mail_info'|trans({}, 'FSiAdminSecurity') }}
-    {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.confirmationToken}) %}
-    <a href="{{ changePasswordUrl }}">{{ changePasswordUrl }}</a>
+    <p>
+        {{ 'admin.password_reset.request.mail.info'|trans({}, 'FSiAdminSecurity') }}<br/>
+        {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.confirmationToken}) %}
+        <a href="{{ changePasswordUrl }}">{{ changePasswordUrl }}</a>
+    </p>
+    <p>
+        {{ 'admin.password_reset.request.mail.requested_by'|trans({'%ip%': ip, '%user_agent%': user_agent}, 'FSiAdminSecurity') }}
+    </p>
 {%- endblock %}
