Got rid of FOSUserBundle

--- a/Resources/views/PasswordReset/change_password.html.twig
+++ b/Resources/views/PasswordReset/change_password.html.twig
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'class': 'form-signin'}}) }}
     {{ form_widget(form) }}
-    <input type="submit" class="btn btn-primary" value="Change password" />
+    <input type="submit" class="btn btn-lg btn-primary btn-block" value="{{ 'admin.password_reset.change_password.form.button.change_password'|trans({}, 'FSiAdminSecurity') }}" />
     {{ form_end(form) }}
 {% endblock %}
