--- a/Resources/views/PasswordReset/mail.html.twig
+++ b/Resources/views/PasswordReset/mail.html.twig
@@ -5,7 +5,7 @@
 {% block body_html -%}
     <p>
         {{ 'admin.password_reset.request.mail.info'|trans({}, 'FSiAdminSecurity') }}<br/>
-        {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.confirmationToken}) %}
+        {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.passwordResetToken.token}) %}
         <a href="{{ changePasswordUrl }}">{{ changePasswordUrl }}</a>
     </p>
     <p>
