--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -50,7 +50,8 @@
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
         }
-        .form-signin input[type="password"] {
+        .form-signin input[type="password"],
+        .form-signin input[type="email"] {
             margin-bottom: 10px;
             border-top-left-radius: 0;
             border-top-right-radius: 0;
@@ -65,6 +66,7 @@
 
 <body>
 <div class="container">
+    {% block themes %}{% endblock %}
     {% block body %}{% endblock %}
 </div>
 </body>
