Change password template tweaked

--- a/Resources/views/Admin/change_password.html.twig
+++ b/Resources/views/Admin/change_password.html.twig
@@ -5,22 +5,37 @@
 {% endblock themes %}
 
 {% block content %}
-<div class="col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <span id="page-header">{% block header %}{{ 'admin.change_password'|trans({}, 'FSiAdminSecurity') }}{% endblock header %}</span>
-            {{ form_start(form, { 'attr': { class: 'form-horizontal' }|merge(form.vars.attr) }) }}
-            {{ form_widget(form) }}
-            <div class="form-group">
-                <div class="col-lg-offset-2 col-lg-10">
-                    <button type="submit" class="btn btn-primary">
-                        <span class="glyphicon glyphicon-floppy-disk"></span>
-                        {{ 'admin.change_password_form.button.save'|trans({}, 'FSiAdminSecurity')  }}
-                    </button>
-                </div>
-            </div>
-            {{ form_end(form) }}
+    <h3>
+        <span id="page-header">
+            {% block header %}{{ 'admin.change_password'|trans({}, 'FSiAdminSecurity') }}{% endblock header %}
+        </span>
+    </h3>
+
+    {{ form_start(form, { 'attr': form.vars.attr|merge({ class: 'form-horizontal' }) }) }}
+    {{ form_widget(form) }}
+    <div class="form-group">
+        <div class="col-lg-offset-2 col-lg-10">
+            <button type="submit" class="btn btn-primary">
+                <span class="glyphicon glyphicon-floppy-disk"></span>
+                {{ 'admin.change_password_form.button.save'|trans({}, 'FSiAdminSecurity')  }}
+            </button>
         </div>
     </div>
-</div>
+    {{ form_end(form) }}
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        require(['jquery'], function ($) {
+            function initForms($context) {
+                $context.find('label.required').each(function (index, label) {
+                    if (!$(label).find('.glyphicon-asterisk').length) {
+                        $(label).append(' <i class="glyphicon glyphicon-asterisk"></i>');
+                    }
+                });
+            }
+            initForms($('body'));
+        });
+    </script>
+{% endblock javascripts %}
