--- a/Resources/views/PasswordReset/mail.html.twig
+++ b/Resources/views/PasswordReset/mail.html.twig
@@ -5,10 +5,10 @@
 {% block body_html -%}
     <p>
         {{ 'admin.password_reset.request.mail.info'|trans({}, 'FSiAdminSecurity') }}<br/>
-        {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: user.passwordResetToken.token}) %}
+        {% set changePasswordUrl = url('fsi_admin_security_password_reset_change_password', {token: receiver.passwordResetToken.token}) %}
         <a href="{{ changePasswordUrl }}">{{ changePasswordUrl }}</a>
     </p>
     <p>
-        {{ 'admin.password_reset.request.mail.requested_by'|trans({'%ip%': ip, '%user_agent%': user_agent}, 'FSiAdminSecurity') }}
+        {{ 'admin.password_reset.request.mail.requested_by'|trans({'%ip%': request.clientIp, '%user_agent%': request.headers.user_agent}, 'FSiAdminSecurity') }}
     </p>
 {%- endblock %}
