--- a/Resources/views/PasswordReset/change_password.html.twig
+++ b/Resources/views/PasswordReset/change_password.html.twig
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block body %}
+    {{ parent() }}
+
     {{ form_start(form, {'attr': {'class': 'form-signin'}}) }}
     {{ form_widget(form) }}
     <input type="submit" class="btn btn-lg btn-primary btn-block" value="{{ 'admin.password_reset.change_password.form.button.change_password'|trans({}, 'FSiAdminSecurity') }}" />
