--- a/Resources/views/PasswordReset/request.html.twig
+++ b/Resources/views/PasswordReset/request.html.twig
@@ -5,15 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    {% if app.request.hasPreviousSession %}
-        {% for type, messages in app.session.flashbag.all() %}
-            {% for message in messages %}
-                <div class="alert flash {{ type }}">
-                    {{ message|trans({}, 'FSiAdminSecurity') }}
-                </div>
-            {% endfor %}
-        {% endfor %}
-    {% endif %}
+    {{ parent() }}
 
     {{ form_start(form, {'attr': {'class': 'form-signin'}}) }}
     {{ form_widget(form) }}
