Fixture app updates and fixes, corrected Behat base_path for local instances

--- a/features/fixtures/project/app/Resources/views/activation.html.twig
+++ b/features/fixtures/project/app/Resources/views/activation.html.twig
@@ -1,5 +1,5 @@
-{% extends 'FSiAdminSecurityBundle:Activation:change_password.html.twig' %}
+{% extends '@FSiAdminSecurity/Activation/change_password.html.twig' %}
 
 {% block themes %}
-    {% form_theme form '::form_theme.html.twig' %}
+    {% form_theme form 'form_theme.html.twig' %}
 {% endblock %}
