--- a/features/fixtures/project/app/Resources/views/change_password.html.twig
+++ b/features/fixtures/project/app/Resources/views/change_password.html.twig
@@ -1,5 +1,5 @@
-{% extends 'FSiAdminSecurityBundle:PasswordReset:change_password.html.twig' %}
+{% extends '@FSiAdminSecurity/PasswordReset/change_password.html.twig' %}
 
 {% block themes %}
-    {% form_theme form '::form_theme.html.twig' %}
+    {% form_theme form 'form_theme.html.twig' %}
 {% endblock %}
