Added info about link validity in email

--- a/Resources/views/Activation/mail.html.twig
+++ b/Resources/views/Activation/mail.html.twig
@@ -8,4 +8,7 @@
         {% set activationUrl = url('fsi_admin_activation', {token: receiver.activationToken.token}) %}
         <a href="{{ activationUrl }}">{{ activationUrl }}</a>
     </p>
+    <p>
+        {{ 'admin.mail.link_valid'|trans }} <b>{{ receiver.activationToken.token.expiresAd|data('d/m/Y H:i') }}</b>
+    </p>
 {%- endblock %}
