Use Symfony Mailer instead of SwiftMailer

--- a/features/fixtures/project/templates/activation.html.twig
+++ b/features/fixtures/project/templates/activation.html.twig
@@ -1,5 +1,5 @@
-{% extends '@FSiAdminSecurity/Activation/change_password.html.twig' %}
+{% extends '@FSiAdminSecurity/Activation/changePassword.html.twig' %}
 
 {% block themes %}
-    {% form_theme form 'form_theme.html.twig' %}
+    {% form_theme form 'formTheme.html.twig' %}
 {% endblock %}
